--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://hoonapps.github.io"
 
 plugins:
-  - jekyll-sitemap
+ # - jekyll-sitemap
 
 github:
   username: hoonapps # change to your GitHub username
