--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # used by seo meta and the atom feed
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://hoonapps.github.io"
 
-plugins:
+#plugins:
  # - jekyll-sitemap
 
 github:
